# flightctl

./: .coderabbit.yaml  .dockerignore  .dockerrc  .gitattributes  .gitignore  .golangci.yml  .lycheeignore  .markdownlint-cli2.yaml  .packit.yaml  .spectral.yaml  .spelling  AGENTS.md  BUG_REPORT_RESTORE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Containerfile  Containerfile.alert-exporter  Containerfile.alertmanager-proxy  Containerfile.api  Containerfile.cli-artifacts  Containerfile.db-setup  Containerfile.edm1392  Containerfile.edm1392-test  Containerfile.imagebuilder-api  Containerfile.imagebuilder-worker  Containerfile.lint  Containerfile.otel-collector  Containerfile.pam-issuer  Containerfile.periodic  Containerfile.telemetry-gateway  Containerfile.ui-init  Containerfile.ui-setup  Containerfile.userinfo-proxy  Containerfile.worker  Dockerfile.integration-test  GEMINI.md  Makefile  README.md  Vagrantfile  (+27 more)
.ai-bot/: implementation-notes.md  patch.diff  pr.md  review.md  root-cause.md  session-context.md  verification.md
.claude/: settings.local.json
.github/: BACKPORT_LABELS.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.tekton/: flightctl-api-main-pull-request.yaml  flightctl-api-main-push.yaml  flightctl-periodic-main-pull-request.yaml  flightctl-periodic-main-push.yaml  flightctl-release-api-0-3-0-pull-request.yaml  flightctl-release-api-0-3-0-push.yaml  flightctl-release-api-0-5-pull-request.yaml  flightctl-release-api-0-5-push.yaml  (+6 more)
api/: AGENTS.md
deploy/sosreport/: pyproject.toml
deploy/sosreport/sos/report/plugins/: flightctl.py
(+3716 files in other folders)
